css/custom.css
/*gray-darker:           #515665;
$gray-dark:             #707782;
$gray:                  #AAB0BF;
$gray-light:            #D3D8E6;
$gray-lighter:          #F3F4F8;
$gray-snow:             #FCFCFC;

$brand-primary:         $gray-darker;
$brand-success:         #B7D500;
$brand-info:            #05C6B4;
$brand-warning:         #FFBC1A;
$brand-danger:          #FC7100;*/


@font-face {
  font-family: 'Open Sans';
  src: url('../fonts/OpenSans-Regular-webfont.eot');
  src: url('../fonts/OpenSans-Regular-webfont.woff') format('woff'), url('../fonts/OpenSans-Regular-webfont.ttf') format('truetype'), url('../fonts/OpenSans-Regular-webfont.svg') format('svg');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'Open Sans Bold';
  src: url('../fonts/OpenSansBold-Regular-webfont.eot');
  src: url('../fonts/OpenSansBold-Regular-webfont.woff') format('woff'), url('../fonts/OpenSansBold-Regular-webfont.ttf') format('truetype'), url('../fonts/OpenSansBold-Regular-webfont.svg') format('svg');
  font-weight: bold;
  font-style: normal;
}

@font-face {
  font-family: 'Arvo';
  src: url('../fonts/Arvo.woff') format('woff'), url('../fonts/Arvo-Regular.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'Arvo Bold';
  src: url('../fonts/Arvo-Bold.ttf') format('truetype');
  font-weight: bold;
  font-style: normal;
}


body {
  font-family: 'Open Sans', 'Helvetica', 'Arial', sans-serif;
  font-size: 18px;
  color: #515665;
  position: relative;
  padding-top: 62px; /*navbar height*/
}


h1, h2 {
  font-family: 'Arvo Bold', 'Georgia', 'Times New Roman', serif;
  font-size: 2rem;
  margin-top: 1rem;
  margin-bottom: 1.5rem;
}

h3, h4, h5, h6 {
  font-family: 'Open Sans', 'Helvetica', sans-serif;
  font-weight: 700;
  font-size: 1.4rem;
}

section {
  padding-top: 3rem;
  padding-bottom: 3rem;
  display: flex;
  justify-content: center;
}

section:nth-of-type(2n) {
  background-color: #F3F4F8;
}

.content {
  width: 720px;
  max-width: 100%;
}

.minicaps {
  font-size: 0.8rem;
  text-transform: uppercase;
  text-align: center;
}

.lead {
  font-size: 1.4rem;
}

.bold {
  font-weight: bold;
}

#page-header {
  background: url(../img/post-its.jpg) no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  min-height: 90vh;
  display: flex;
  align-items: center;
  color: #000;
}

#page-header.jumbotron {
  background-color: #fff;
}

#page-header .container {
  background: rgba(255,255,255,0.7);
  padding: 2rem;
  display: flex;
}

#page-header .container .event-logo {
  height: 300px;
  display: flex;
  justify-content: center;
}

#page-header .container .event-logo img {
  height: 100%;
}

#page-header .container .event-info {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

#page-header button.p2pu-btn {
  font-size: 1rem;
}

#top-nav {
  background-color: #fff;
  box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.1);
}

#details .itinerary {
  padding-top: 1rem;
  padding-bottom: 1rem;
  display: flex;
  flex-wrap: wrap;
}

#details .itinerary > div {
  padding: 1rem;
}

#details .date {
  font-weight: bold;
  font-size: 0.8rem;
  text-transform: uppercase;
  margin-bottom: 10px;
}

#faq .faq-container {
  padding-bottom: 20px;
}

#faq .faq-container:nth-of-type(4n+1) .question {
  border-bottom: 4px solid #FFBC1A; /*yellow*/
}

#faq .faq-container:nth-of-type(4n+2) .question {
  border-bottom: 4px solid #05C6B4;
}

#faq .faq-container:nth-of-type(4n+3) .question {
  border-bottom: 4px solid #FC7100;
}

#faq .faq-container:nth-of-type(4n+4) .question {
  border-bottom: 4px solid #B7D500;
}

#faq .question {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
}

#faq .answer {
  margin: 15px 0;
  overflow: hidden;
  transition: max-height 0.5s ease-in-out;
}

#footer {
  background: #515665;
  color: #FFF;
  font-size: 0.8em;
  padding-left: 40px;
  padding-right: 40px;
  padding-top: 20px;
}

#footer a {
  color: #FFF;
}

#footer header {
  padding-bottom: 20px;
}

#footer .social .content > div {
  margin-bottom: 10px;
}

#footer .social span i {
  margin-right: 10px;
  width: 14px;
}

#footer .newsletter {
  float: right;
}

#footer .newsletter form {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

#footer .social div, #footer .newsletter div {
  width: 100%;
  text-align: center;
}

#footer #mc_embed_signup_scroll {
  width: 100%;
}

#footer input[type="email"] {
  border: none;
  background: none;
  border-bottom: 2px solid #FFF;
  width: 100%;
  margin-bottom: 10px;
}

#footer input[type="email"]::placeholder {
  font-style: italic;
  color: #F3F4F8;
  text-align: center;
}

#footer .toc {
    padding-bottom: 20px;
    padding-top: 20px;
    border-top: 1px solid #AAB0BF;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    color: #AAB0BF;
    font-size: 14px;
}

#footer .toc > div {
  padding: 0 10px;
}

#footer .toc > div a {
  color: #AAB0BF;
}

#footer .row {
  margin-left: 0;
  margin-right: 0;
  margin-bottom: 20px;
}

#footer .subtitle .underline {
  display: inline-block;
  vertical-align: middle;
  -webkit-transform: perspective(1px) translateZ(0);
  transform: perspective(1px) translateZ(0);
  box-shadow: 0 0 1px transparent;
  position: relative;
  overflow: hidden;
}

#footer .subtitle .underline .text h4 {
  font-family: 'Arvo Bold';
  text-transform: uppercase;
  transform: translateY(0.3em);
}

#footer .subtitle .underline .text:before {
  content: "";
  position: absolute;
  z-index: -1;
  left: 0;
  right: 0;
  width: 100%;
  bottom: 0;
  background: #AAB0BF;
  height: 0.6rem;
  -webkit-transition-property: right;
  transition-property: right;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
}

#footer .subtitle .underline .text.light:before {
  background: rgba(255,255,255,0.6);
}

#footer .social .content div {
  text-align: left;
}

header.page-title {
  display: flex;
  flex-direction: column;
  align-content: center;
  justify-content: center;
  text-transform: uppercase;
  text-align: center;
}

header.page-title h1 {
  margin-bottom: 0;
}

.p2pu-btn {
  border-radius: 2em;
  text-transform: uppercase;
  font-size: 0.8em;
  font-family: 'Open Sans', 'Helvetica', 'Arial', sans-serif;
  font-weight: bolder;
  padding: 10px 20px;
  border: none;
  cursor: pointer;

  -webkit-transform: perspective(1px) translateZ(0);
  transform: perspective(1px) translateZ(0);
  box-shadow: 0 0 1px transparent;
  position: relative;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
}

.p2pu-btn:before {
  content: "";
  position: absolute;
  border-radius: 2em;
  z-index: -1;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  -webkit-transform: scaleX(0);
  transform: scaleX(0);
  -webkit-transform-origin: 50%;
  transform-origin: 50%;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
}

.p2pu-btn.light {
  background: #F3F4F8;
  color: #515665;
}

.p2pu-btn.light:before {
  background: #fff;
}

.p2pu-btn.orange {
  background: #FC7100;
  color: #fff;
}

.p2pu-btn.orange:before {
  opacity: 0.8;
}

